ChangeLog for varconf
2004-09-30  Al Riddoch  <alriddoch@zepler.org>

	* Move to configure.ac, adding in checks for sigc++-2.0 if
	  1.2 is not available.

	* varconf/Config.h, varconf/config.cpp: Return the index
	  of the first cmdline argument which is not an option.

2004-06-06  Al Riddoch  <alriddoch@zepler.org>

	* Fix invocation of configure in rpm spec.

	* Fix devel dependencies in rpm spec.

Tuesday, 10th December, 2004, Kai Blin <blin@gmx.net>
	* fixed documentation in Makefile.am, it was installing the docs
	  without asking where to put them.

Friday, 19th December, 2003, Al Riddoch <alriddoch@zepler.org>
	* Use AC_CANONICAL_SYSTEM macro
	* Remove Serial from rpm spec as it is not required, and messes up
	  deps.
	* Increment version to 0.6.1, interface version 2.0.0 and release.

Saturday, 22nd November, 2003, Al Riddoch <alriddoch@zepler.org>
	* varconf/variable.h, varconf/variable.cpp: Make operator std::string()
	  const, so it can be used on a const object.

Friday, 21st November, 2003, Al Riddoch <alriddoch@zepler.org>
	* varconf/config.cpp, varconf/Config.h: Clean up accessing
	  config to use std::map::find() when apropriate. Add functions
	  to query and retrieve sections.

Sunday, 19th October, 2003, James Turner <james@worldforge.org>
	* Add ProjectBuilder project, which current relies on a
	  SigC++ 1.2 framework which I'll make available on
	  FTP if people poke me (it requires some source modifications)
	* Add __APPLE__ specific code to config.cpp, to deal with the
	  fact the C runtime doesn't export the 'environ' symbol to
	  dylibs (i.e, a framework build). The fix comes from Tcl, by
	  way of guile, and Google.

Saturday, 20th September, 2003, Ron Steinke <rsteinke@w-link.net>
	* Workaround for buggy win32 atof().

Thursday, 3rd July, 2003, Al Riddoch <alriddoch@zepler.org>
	* Update rpm spec to be cleaner, and make the technical sections
	  more generic.

Friday, 25th June, 2003, Al Riddoch <alriddoch@zepler.org>