@@ -17,29 +17,22 @@ AM_CONFIG_HEADER(config.h)
 AM_MAINTAINER_MODE
 
 dnl versioning info for libtool
+dnl DO NOT CHANGE VARCONF_CURRENT HERE. See the checks for sigc++
+dnl further down. If we link against sigc++ 1.2, then this should be
+dnl N, if we link against sigc++ 2.0 it should be N+1. If you change
+dnl this because of API changes, it needs to be incremented by
+dnl 2, and the changes made to the values assigned in the sigc++ check.
 VARCONF_CURRENT=2
 VARCONF_REVISION=0
 VARCONF_AGE=0
-VARCONF_VERSION_INFO=$VARCONF_CURRENT:$VARCONF_REVISION:$VARCONF_AGE
-VARCONF_VERSION_NO=$VARCONF_CURRENT.$VARCONF_AGE.$VARCONF_REVISION
 VARCONF_REQUIRES=""
+VARCONF_CONFLICTS=""
 VARCONF_LIB_SUFFIX="-1.0"
-
-AC_SUBST(VARCONF_VERSION)
-AC_SUBST(VARCONF_VERSION_INFO)
-AC_SUBST(VARCONF_VERSION_NO)
-AC_SUBST(VARCONF_LIB_SUFFIX)
 
 VARCONF_PACKAGE=varconf
 MIN_SIGC_VERSION=1.2.0
 
 dnl General Initialization
-AC_SUBST(VARCONF_CURRENT)
-AC_SUBST(VARCONF_REVISION)
-AC_SUBST(VARCONF_AGE)
-AC_SUBST(VARCONF_VERSION)
-AC_SUBST(VARCONF_PACKAGE)
-AC_SUBST(MIN_SIGC_VERSION)
 
 dnl Test for GNU libtool
 
@@ -72,6 +65,8 @@ PKG_CHECK_MODULES(SIGC, sigc++-1.2 >= $MIN_SIGC_VERSION,
         CPPFLAGS="$CPPFLAGS $SIGC_CFLAGS"
         LDFLAGS="$LDFLAGS $SIGC_LIBS"
         VARCONF_REQUIRES="$VARCONF_REQUIRES sigc++-1.2"
+        VARCONF_CONFLICTS="$VARCONF_CONFLICTS sigc++-2.0 > 1.9"
+        VARCONF_CURRENT=2
     ],
     [
         PKG_CHECK_MODULES(SIGC, sigc++-2.0 >= $MIN_SIGC_VERSION,
@@ -79,6 +74,8 @@ PKG_CHECK_MODULES(SIGC, sigc++-1.2 >= $MIN_SIGC_VERSION,
                 CPPFLAGS="$CPPFLAGS $SIGC_CFLAGS"
                 LDFLAGS="$LDFLAGS $SIGC_LIBS"
                 VARCONF_REQUIRES="$VARCONF_REQUIRES sigc++-2.0"
+                VARCONF_CONFLICTS="$VARCONF_CONFLICTS sigc++-1.2 < 2.0"
+                VARCONF_CURRENT=3
             ],
             [
                 AC_MSG_ERROR([Couldn't find sigc++ library!])
@@ -87,13 +84,17 @@ PKG_CHECK_MODULES(SIGC, sigc++-1.2 >= $MIN_SIGC_VERSION,
 
 AC_LANG_POP(C++)
 
-SYSTEM_LIBS=
-AC_SUBST(SYSTEM_LIBS)
-
 VARCONF_LIBS="-lvarconf$VARCONF_LIB_SUFFIX"
-AC_SUBST(VARCONF_LIBS)
+VARCONF_VERSION_INFO=$VARCONF_CURRENT:$VARCONF_REVISION:$VARCONF_AGE
 
+AC_SUBST(VARCONF_LIBS)
 AC_SUBST(VARCONF_REQUIRES)
+AC_SUBST(VARCONF_CONFLICTS)
+AC_SUBST(VARCONF_VERSION)
+AC_SUBST(VARCONF_VERSION_INFO)
+AC_SUBST(VARCONF_LIB_SUFFIX)
+AC_SUBST(VARCONF_PACKAGE)
+AC_SUBST(MIN_SIGC_VERSION)
 
 dnl Generate files                         
 AC_OUTPUT([
