@@ -6,6 +6,7 @@ includedir=@includedir@
 Name: @VARCONF_PACKAGE@
 Description: A config handling library.
 Requires: @VARCONF_REQUIRES@
+Conflicts: @VARCONF_CONFLICTS@
 Version: @VARCONF_VERSION@
 Libs: -L${libdir} @VARCONF_LIBS@
 Cflags: -I${includedir}/varconf@VARCONF_LIB_SUFFIX@
